# CheezyRat

./: .gitignore  README.md
client/: CMakeLists.txt
client/src/: main.cpp
client/src/network/: network.cpp  network.h
server/: CMakeLists.txt
server/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
server/src/: main.cpp
server/src/client_class/: client.cpp  client.h
server/src/network/: network.cpp  network.h
